# MACRO

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.py  tox.ini
apps/: __init__.py  config.py  views.py
apps/static/assets/css/: style.css
apps/templates/includes/: head.html  menu-list.html  navigation.html  scripts.html
apps/templates/pages/: index.html  run_models.html  upload_data.html  view_data.html
macro/: config_dev.py  config_prod.py  forms.py  main.py  utils.py  views.py
macro/static/css/: style.css
macro/templates/: 404.html  _macros.html  index.html  layout.html  run.html  run_models.html  upload.html  upload_data.html  view.html  view_data.html  view_output.html
models/: model_24hs.pkl  model_admission.pkl
nginx/: juclinical-app.conf
old/: app.py
old/models/: model_cascade.pkl
old/templates/: data_show.html  index.html
templates/: prediction.html
